ajuste de nombres a minúsculas para Render

--- a/public/bienvenida.html
+++ b/public/bienvenida.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/bienvenida.css">
+
   <title>Bienvenido</title>
   <style>
     body {
