--- a/public/Veterinaria.html
+++ b/public/Veterinaria.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/veterinaria.css">
+  <link rel="stylesheet" href="/public/veterinaria.html">
   <title>Happy Pets</title>
 </head>
 <body>
 
   <!-- Barra superior con logo -->
   <div class="top-bar">
-    <img src="/Images/Logo.png" alt="Logo">
+    <img src="images/Logo.png" alt="Logo">
     <h1>Registro de hospitalización</h1>
   </div>
 
