se cambian veterinaria html y css

--- a/public/Veterinaria.html
+++ b/public/Veterinaria.html
@@ -1,43 +1,95 @@
-<!-- public/veterinaria.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Pets</title>
-  <link rel="stylesheet" href="/css/veterinaria.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="css/veterinaria.css">
+<title>Happy Pets</title>
 </head>
+
 <body>
+
+  <!-- Barra superior con logo -->
   <div class="top-bar">
-    <img src="/Images/Logo.png" alt="Logo">
+    <img src="images/Logo.png" alt="Logo">
     <h1>Registro de hospitalización</h1>
   </div>
 
+  <!-- Contenedor principal con imágenes laterales y formulario -->
   <div class="container">
+    <!-- Imagen izquierda -->
     <div class="image-box image-veterinario"></div>
 
+    <!-- Formulario central -->
     <div class="form-container">
-      <form id="formulario">
-        <div class="form-group"><label>Nombre del Dueño</label><input name="nombre_dueño" required></div>
-        <div class="form-group"><label>Apellido</label><input name="apellido_dueño" required></div>
-        <div class="form-group"><label>Teléfono</label><input name="telefono"></div>
-        <div class="form-group"><label>Dirección</label><input name="direccion"></div>
-        <div class="form-group"><label>Nombre Mascota</label><input name="nombre_mascota"></div>
-        <div class="form-group"><label>Especie</label><input name="especie"></div>
-        <div class="form-group"><label>Raza</label><input name="raza"></div>
-        <div class="form-group"><label>Edad</label><input name="edad" type="number" min="0"></div>
-        <div class="form-group full-width"><label>Motivo</label><textarea name="motivo_consulta"></textarea></div>
-        <div class="form-group full-width"><label>Diagnóstico</label><textarea name="diagnostico"></textarea></div>
-        <div class="form-group"><label>Ingreso</label><input name="fecha_ingreso" type="date"></div>
-        <div class="form-group"><label>Salida</label><input name="fecha_salida" type="date"></div>
-        <div class="form-group full-width" style="text-align:center;">
-          <button type="submit" class="btn-enviar">Enviar</button>
+      
+
+    <!-- Aquí estaba el título de registo de hopitalización -->
+      <form method="POST" action="/registro">
+        <!-- Datos del dueño -->
+        <div class="form-group">
+          <label for="nombre_dueño">Nombre del Dueño</label>
+          <input type="text" id="nombre_dueño" name="nombre_dueño" required>
+        </div>
+        <div class="form-group">
+          <label for="apellido_dueño">Apellido</label>
+          <input type="text" id="apellido_dueño" name="apellido_dueño" required>
+        </div>
+        <div class="form-group">
+          <label for="telefono">Teléfono</label>
+          <input type="tel" id="telefono" name="telefono">
+        </div>
+        <div class="form-group">
+          <label for="direccion">Dirección</label>
+          <input type="text" id="direccion" name="direccion">
+        </div>
+
+        <!-- Datos de la mascota -->
+        <div class="form-group">
+          <label for="nombre_mascota">Nombre de la Mascota</label>
+          <input type="text" id="nombre_mascota" name="nombre_mascota">
+        </div>
+        <div class="form-group">
+          <label for="especie">Especie</label>
+          <input type="text" id="especie" name="especie">
+        </div>
+        <div class="form-group">
+          <label for="raza">Raza</label>
+          <input type="text" id="raza" name="raza">
+        </div>
+        <div class="form-group">
+          <label for="edad">Edad</label>
+          <input type="number" id="edad" name="edad" min="0">
+        </div>
+
+        <!-- Diagnóstico y fechas -->
+        <div class="form-group" style="width: 100%;">
+          <label for="motivo_consulta">Motivo de la consulta / Descripción de ingreso</label>
+          <textarea id="motivo_consulta" name="motivo_consulta" rows="3" required></textarea>
+        </div>
+        <div class="form-group" style="width: 100%;">
+          <label for="diagnostico">Diagnóstico</label>
+          <textarea id="diagnostico" name="diagnostico" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="fecha_ingreso">Fecha de Ingreso</label>
+          <input type="date" id="fecha_ingreso" name="fecha_ingreso">
+        </div>
+        <div class="form-group">
+          <label for="fecha_salida">Fecha Estimada de Salida</label>
+          <input type="date" id="fecha_salida" name="fecha_salida">
+        </div>
+
+        <!-- Botón enviar -->
+        <div class="form-group" style="width: 100%; text-align: center;">
+          <button type="submit" class="btn-enviar">Enviar formulario</button>
         </div>
       </form>
     </div>
 
+    <!-- Imagen derecha -->
     <div class="image-box image-mascota"></div>
   </div>
 
-  <script src="/js/veterinaria.js"></script>
 </body>
 </html>
