se cambia ruta de href

--- a/public/Veterinaria.html
+++ b/public/Veterinaria.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/veterinaria.css">
+  <link rel="stylesheet" href="/public/css/veterinaria.css">
 <title>Happy Pets</title>
 </head>
 
