se agrega una linea de prueba para html

--- a/public/Veterinaria.html
+++ b/public/Veterinaria.html
@@ -3,11 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="/public/css/veterinaria.css">
+  <link rel="stylesheet" href="/css/veterinaria.css">
+
 <title>Happy Pets</title>
 </head>
 
 <body>
+
+
+<!-- PRUEBA-->
+
+<body>
+  <div class="top-bar">
+    <img src="Images/logo.png" alt="Logo"> <!-- Puedes reemplazar el logo si no lo tienes -->
+    <h1>Veterinaria Happy Pets</h1>
+  </div>
+
+  <div class="container">
+    <!-- Aquí va el resto del contenido -->
+  </div>
+</body>
+
+
+
+
+
+
+
+
+
+
+
 
   <!-- Barra superior con logo -->
   <div class="top-bar">
