--- a/public/veterinaria.html
+++ b/public/veterinaria.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="/css/veterinaria.css">
+  <link rel="stylesheet" href="index.css">
 
 <title>Happy Pets</title>
 </head>
