se cambia la ruta de la imagen logo

--- a/public/veterinaria.html
+++ b/public/veterinaria.html
@@ -13,7 +13,7 @@
 
   <!-- Barra superior con logo -->
   <div class="top-bar">
-    <img src="images/Logo.png" alt="Logo">
+    <img src="/public/Images/Logo.png" alt="Logo">
     <h1>Registro de hospitalización</h1>
   </div>
 
