se cambia la ruta de la imagen en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
   <!-- Encabezado -->
   <div class="top-bar">
-    <img src="Images/logo.png" alt="Logo Happy Pets">
+    <img src="/public/Images/Logo.png" alt="Logo Happy Pets">
     <h1>Veterinaria Happy Pets</h1>
   </div>
 
