--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Veterinaria Happy Pets</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="veterinaria.css">
 </head>
 <body>
 
