se verifica viewport

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Pets</title>
-  <link rel="stylesheet" href="index.css" />
+<meta name="viewport" content="width=device-width">
+ <link rel="stylesheet" href="index.css" />
+  
 </head>
-
+<title>Happy Pets</title>
 <body>
 
   <!-- Barra superior con logo -->
