--- a/public/bienvenida.html
+++ b/public/bienvenida.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width">
+
   <link rel="stylesheet" href="css/bienvenida.css">
 
   <title>Bienvenido</title>
