--- a/public/formulario.html
+++ b/public/formulario.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="formulario.css" />
   <title>Happy Pets</title>
 </head>
 
 <body>
+
+<!-- Linea de logueado -->
+<script>
+  if (localStorage.getItem('logueado') !== 'true') {
+    window.location.href = 'login.html';
+  }
+</script>
+
 
   <!-- Barra superior con logo -->
   <div class="top-bar">
