error veterina.html en bienvenida corregido

--- a/public/bienvenida.html
+++ b/public/bienvenida.html
@@ -49,8 +49,8 @@
 
     // Redireccionar al formulario real después de 3 segundos
     setTimeout(() => {
-      window.location.href = "veterinaria.html";
-    }, 3000);
+      window.location.href = "formulario.html";
+    }, 10000);
   </script>
 
 <h2 id="mensaje"></h2>
