--- a/public/bienvenida.html
+++ b/public/bienvenida.html
@@ -32,6 +32,20 @@
   </style>
 </head>
 <body>
+
+<audio autoplay loop>
+  <source src="/public/audio/Shine On - Roa  [Vlog No Copyright].mp3" type="audio/mpeg">
+  Tu navegador no soporta el elemento de audio.
+</audio>
+
+<audio controls autoplay>
+  <source src="/public/audio/Shine On - Roa  [Vlog No Copyright].mp3" type="audio/mpeg">
+  Tu navegador no soporta el elemento de audio.
+</audio>
+
+
+
+
   <div class="mensaje">
     <h1 id="saludo"></h1>
   </div>
