se arregla el titulo html

--- a/public/formulario.html
+++ b/public/formulario.html
@@ -17,12 +17,14 @@
 </script>
 
 <!-- ✅ Barra superior con logo y botón cerrar sesión -->
-<div class="top-bar" style="display: flex; align-items: center; justify-content: space-between;">
-  <div style="display: flex; align-items: center;">
-    <img src="Images/Logo.png" alt="Logo" />
-    <h1 style="margin-left: 10px;">Registro de hospitalización</h1>
+<div class="top-bar">
+  <img src="Images/Logo.png" alt="Logo" />
+  <div class="titulo-wrapper">
+    <h1>Registro de hospitalización</h1>
   </div>
-  
+</div>
+
+
 </div>
 
 <!-- Contenedor principal -->
